# tepra-api

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  mise.toml  rust-toolchain.toml
.claude/: settings.json
.devcontainer/: devcontainer.json  gen_mcp_json.py  postStartCommand.sh
.github/: project-config.json
.github/actions/act-actionlint/: action.yaml
.github/actions/act-audit/: action.yaml
.github/actions/act-docs-ci/: action.yaml
.github/actions/act-setup-rust/: action.yaml
.github/workflows/: release-manager.yaml  release.yaml  rust-ci.yaml
.mise/: tasks.toml
crates/tepra/: Cargo.toml
crates/tepra-api/: Cargo.toml
crates/tepra-api/src/: lib.rs  router.rs  state.rs  views.rs
crates/tepra-api/src/actor/: printer.rs  registry.rs
crates/tepra-api/src/handlers/: jobs.rs  mod.rs  printers.rs  templates.rs
crates/tepra-api/tests/: actor_registry.rs  askama_render.rs  handlers_printers.rs  handlers_templates.rs  list_templates.rs  views_integration.rs
crates/tepra-core/: Cargo.toml
crates/tepra-core/src/: lib.rs
crates/tepra-core/src/client/: mod.rs  reqwest_client.rs
crates/tepra-core/src/dto/: enums.rs
crates/tepra-core/src/otel/: conventions.rs  mod.rs
crates/tepra-core/src/otel/metrics/: mod.rs  process.rs
crates/tepra-core/tests/: reqwest_errors.rs  reqwest_get.rs  reqwest_post.rs  smoke.rs
crates/tepra-web/: Cargo.toml  build.rs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/tepra-web/src/: assets.rs  cli.rs  lib.rs  main.rs
crates/tepra-web/src/styles/: app.css
crates/tepra-web/tests/: bin_smoke.rs  cli_parse.rs  smoke.rs
crates/tepra/src/: lib.rs  router.rs  templates.rs  views.rs
crates/tepra/src/actor/: job.rs  mod.rs  printer.rs  registry.rs
crates/tepra/src/handlers/: views.rs
crates/tepra/templates/: index.html  job_card.html  printer_detail.html
crates/tepra/templates/components/: alert.html
crates/tepra/templates/pages/: index.html  printer_detail.html
crates/tepra/templates/partials/: job_card.html
crates/tepra/templates/shells/: dashboard.html
crates/tepra/tests/: actor_cancel.rs  actor_queue.rs  actor_registry.rs  askama_render.rs  handlers_jobs.rs  handlers_printers.rs  handlers_templates.rs  htmx_polling.rs  list_templates.rs  smoke.rs  views_integration.rs
crates/tepra/tests/snapshots/: askama_render__index_empty.snap  askama_render__index_two_printers.snap  askama_render__job_card_canceled.snap  askama_render__job_card_completed.snap  askama_render__job_card_in_progress.snap  askama_render__printer_detail_offline.snap  askama_render__printer_detail_online.snap
docs/: development.md
docs/adr/latest/: 0001-split-tepra-api-into-three-crates.md  0004-printer-actor-pattern.md  0005-cli-subcommand-split.md  0006-http-observability-with-tower-http-tracelayer.md  0007-ui-testing-strategy.md
docs/specs/architecture/: printer-actor.md  pwa-asset-pipeline.md
docs/specs/components/: askama-templates.md  tepra-api-router.md  tepra-core-tepra-client.md  tepra-router.md  tepra-web-cli.md
