# - -------------------------------------------------------------------------------------------------
# - Workspace
# -
[workspace]
resolver = "3"
# graft:keep-start
# Project-specific dependencies are listed here.

members = [
	"crates/tepra-api",
	"crates/tepra-core",
	"crates/tepra-web",
]

[workspace.package]
version = "0.1.26"
edition = "2024"
license = "AGPL-3.0-only"
publish = false
repository = "https://github.com/naa0yama/boilerplate-rust"
# graft:keep-end

# - -------------------------------------------------------------------------------------------------
# - Dependencies
# -
[workspace.dependencies]
# graft:keep-start
# Project-specific dependencies are listed here.

## Config
figment = { version = "0.10", features = ["env", "toml"] }

## Core
async-trait = "0.1.89"
clap = { version = "4.6.1", default-features = false, features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"] }

## Data
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "multipart", "rustls", "stream"] }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

## Domain
dashmap = "6.2.1"
phf = { version = "0.14", features = ["macros"] }
thiserror = "2.0.18"
ulid = { version = "1", features = ["serde"] }

## HTTP/Web
axum = { version = "0.8.9", features = ["macros", "multipart"] }
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["fs", "trace"] }

## OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }

## Templating
askama = "0.16.0"

## URL
url = "2.5.8"

## Workspace crates
tepra-api = { path = "crates/tepra-api" }
tepra-core = { path = "crates/tepra-core" }

## Dev
axum-test = "20"
insta = { version = "1.48.0", features = ["redactions", "yaml"] }
wiremock = "0.6.5"

# graft:keep-end

## Core
anyhow = "1.0.103"

## Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["ansi", "env-filter", "fmt", "std"] }

## OpenTelemetry
gethostname = "1.1.0"
opentelemetry = { version = "0.32.0", default-features = false, features = ["logs", "metrics", "trace"] }
opentelemetry-appender-tracing = { version = "0.32.0", default-features = false }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["http-proto", "logs", "metrics", "reqwest-blocking-client", "trace"] }
opentelemetry-semantic-conventions = { version = "0.32.1", default-features = false, features = ["semconv_experimental"] }
opentelemetry_sdk = { version = "0.32.1", default-features = false, features = ["logs", "metrics", "trace"] }
sysinfo = { version = "0.39.5", default-features = false, features = ["system"] }
tracing-opentelemetry = { version = "0.33.0", default-features = false }

## Dev
assert_cmd = "=2.2.2"
predicates = "=3.1.4"
tempfile = "=3.27.0"
tracing-mock = "=0.1.0-beta.3"

# - -------------------------------------------------------------------------------------------------
# - Lints
# -
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

## Fundamentals of Safety - Memory Safety
redundant_clone = "warn" #							Detects unnecessary clone() calls (prevents performance degradation).
needless_borrowed_reference = "warn" #				Detects &ref x patterns (prevents misunderstanding of borrowing)
rc_mutex = "warn" #									Detects Rc<Mutex<T>> (Arc<Mutex<T>> is recommended to ensure thread safety).

## Safety Fundamentals - Error Handling
unwrap_used = { level = "warn", priority = 1 } #	unwrap() warning (to prevent panic and enforce appropriate error handling)
expect_used = { level = "warn", priority = 1 } #	`expect()` warning (the `?` operator is recommended outside of tests).
panic = { level = "warn", priority = 1 } #			Panic! Warning (Appropriate handling of recoverable errors is recommended)
question_mark = "warn" #							The use of the `?` operator is recommended (to simplify redundant `match` statements).
match_result_ok = "warn" #							Warning about ignoring errors using Result.ok()
result_unit_err = "warn" #							Warning issued regarding the use of Result<T, ()> (appropriate error type usage recommended).
result_large_err = "warn" #							Warning against using large error types (Boxing recommended).

## Safety Fundamentals - Type Safety
cast_possible_truncation = "warn" #					Warning for casts that may result in value truncation (to prevent data loss)
cast_precision_loss = "warn" #						Warning for casts that cause loss of precision (preserving floating-point precision)

## Performance Optimization - Iterators and Collections
needless_collect = "warn" #							Detects unnecessary .collect() calls (avoids the creation of intermediate collections).
manual_find_map = "warn" #							Optimization suggestion for .find_map() instead of .find().map()
reserve_after_initialization = "warn" #				Prior reservation of Vec capacity is recommended.
manual_filter_map = "warn" #						Manual filter+map optimization suggestion using filter_map
map_flatten = "warn" #								Optimization suggestion for .map().flatten() using .flat_map()
unnecessary_to_owned = "warn" #						Detects unnecessary to_owned() calls (avoids ownership transfer).
single_element_loop = "warn" #						Suggested optimization for single-element loops using if statements.

## Performance optimization - String processing
inefficient_to_string = "warn" #					Detects inefficient to_string() calls (direct conversion recommended).
str_to_string = "warn" #							Detects &str.to_string() (String::from recommended)
## string_to_string is removed; covered by implicit_clone
format_in_format_args = "warn" #					Detected a format! within a format! (direct arguments recommended)
manual_string_new = "warn" #						Detect alternative patterns for String::new()

## Performance Optimization - Memory Efficiency
box_collection = "warn" #							Detects Box<Vec<T>> etc. (direct use recommended)
large_enum_variant = "warn" #						Large enum variants are detected (boxing is recommended).
trivial_regex = "warn" #							Detecting regex usage with simple string comparison

## Code Organization - API Design and Conventions
wrong_self_convention = "warn" #					Detects naming convention violations in the `self` argument (to_*/as_*/into_*).
should_implement_trait = "warn" #					Standard trait implementation is recommended (Display, From, etc.).
missing_errors_doc = "warn" #						Warning issued regarding insufficient documentation for error conditions.
missing_panics_doc = "warn" #						Warning issued regarding insufficient documentation of panic conditions.
missing_safety_doc = "warn" #						Warning: Lack of SAFETY documentation for unsafe function.

## Code Organization - Complexity Management
cognitive_complexity = "warn" #						Warnings about cognitively complex functions
too_many_lines = "warn" #							Warning about excessively long functions
too_many_arguments = "warn" #						Warning issued for functions with too many arguments.
type_complexity = "warn" #							Warning about overly complex type definitions

## Code organization - Module design
module_name_repetitions = "warn" #					Warning about duplicate module names
wildcard_imports = "warn" #							Warning about using wildcards in imports
pub_underscore_fields = "warn" #					Warning issued regarding the use of pub _field (design issue)
large_stack_arrays = "warn" #						Warning about large stack array

## Security & Quality - Debugging and To-Do Management
dbg_macro = "warn" #								dbg! macros in production code warning
todo = "warn" #										Warns about remaining todo! macros
unimplemented = "warn" #							Warns about remaining unimplemented! macros
unreachable = "warn" #								Warns about use of unreachable! macros

## Security and Quality - Numerical and Memory Safety
float_cmp = "warn" #								Warning against direct floating-point comparisons.
arithmetic_side_effects = "warn" #					Warning about integer arithmetic overflow risk
as_conversions = "warn" #							Warning about the dangers of as casting
indexing_slicing = "warn" #							Warning about out-of-bounds access risks

## Security and Quality - API Security
empty_drop = "warn" #								Warning about empty Drop implementation
mem_forget = "warn" #								Warning about the use of mem::forget
exit = "warn" #										Warning about using process::exit
create_dir = "warn" #								`create_dir_all` is recommended over `create_dir`.

## Security & Quality - unsafe block
undocumented_unsafe_blocks = "warn" #				SAFETY comment required for unsafe blocks

## Security and Quality - Output Control
print_stdout = "warn" #								Warning issued for using println!/print! (tracing recommended)
print_stderr = "warn" #								Warning against using eprintln!/eprint! (tracing recommended)

## Exception settings (those permitted due to the nature of the project)
multiple-crate-versions = "allow"
cargo-common-metadata = "allow"

[workspace.lints.rust]
warnings = "warn"
missing_debug_implementations = "warn" #			Warning about unimplemented Debug trait
missing_docs = "warn" #								Warning about insufficient documentation for pub items.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

# - -------------------------------------------------------------------------------------------------
# - Profiles
# -
[profile.dev]
opt-level = 1 #										Improving debug execution speed (balancing it with compilation time)
debug = 2 #											Full debugging information for workspace members

[profile.dev.package."*"]
debug = 1 #											External dependencies are limited to line tables only (size reduction).

[profile.release]
strip = "debuginfo" #								Remove DWARF files, but keep the symbol table (.symtab).
debug = 1 #											Line table generation (deleted by strip=debuginfo,
#													but split-debuginfo will be supported in the future)
lto = "thin"
opt-level = "z"
codegen-units = 1
panic = "abort"
