[package]
name = "tepra-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]

[dependencies]
dashmap = { workspace = true }
tepra-core = { path = "../tepra-core" }
tokio = { workspace = true }

[dev-dependencies]
async-trait.workspace = true
tokio = { workspace = true }

[lints]
workspace = true
