[package]
name = "tepra-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]

[dependencies]
axum = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
tepra-core = { path = "../tepra-core" }
tokio = { workspace = true }

[dev-dependencies]
async-trait.workspace = true
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }

[lints]
workspace = true
