[package]
name = "tepra-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
# - -------------------------------------------------------------------------------------------------
# - Features
# -
[features]
default = ["otel"]
otel = [
	"dep:gethostname",
	"dep:opentelemetry",
	"dep:opentelemetry_sdk",
	"dep:opentelemetry-otlp",
	"dep:tracing-opentelemetry",
	"dep:opentelemetry-appender-tracing",
	"dep:opentelemetry-semantic-conventions",
]
# Process-level OTel semconv metrics via sysinfo. Default-on in tepra-web.
process-metrics = ["otel", "dep:sysinfo"]

# - -------------------------------------------------------------------------------------------------
# - Dependencies
# -
[dependencies]
## Core
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

## Logging
tracing.workspace = true

## OpenTelemetry (optional, behind `otel` feature)
gethostname = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-appender-tracing = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

## System info (optional, activated by downstream process-metrics feature)
sysinfo = { workspace = true, optional = true }

# - -------------------------------------------------------------------------------------------------
# - Dev Dependencies
# -
[dev-dependencies]
opentelemetry_sdk = { workspace = true, features = ["testing"] }
tokio = { workspace = true }
wiremock.workspace = true

# - -------------------------------------------------------------------------------------------------
# - Lints
# -
[lints]
workspace = true
