[package]
name = "tepra-web"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]

[[bin]]
name = "tepra-api"
path = "src/main.rs"

[dependencies]
tepra-api = { workspace = true }
tepra-core = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }

[lints]
workspace = true
