[package]
name = "tepra-web"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]

[[bin]]
name = "tepra-api"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
tepra-api = { workspace = true }
tepra-core = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }

[lints]
workspace = true
